[package]
name = "athena-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
openraft = { git = "https://github.com/datafuselabs/openraft.git", branch = "release-0.10", features = ["serde", "type-alias"] }
reqwest = { version = "0.12.5", features = ["json"] }
rocksdb = "0.22.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.35.1", features = ["full"] }
toy-rpc = { version = "0.8.6", features = [
  "ws_tokio",
  "server",
  "client",
  "tokio_runtime",
] }
tracing = { version = "0.1.40", features = ["max_level_info", "release_max_level_warn"] }
